update and rename

--- a/_posts/2019-09-12-releases.md
+++ b/_posts/2019-09-12-releases.md
@@ -8,13 +8,22 @@ tags:
 ---
 
 <h2>Estuary Releases</h2>
-<table >
-<tbody>
+<table>
+
 <tr>
 <th scope="row">Release Version</th>
 <th style="text-align: center;">Release Date</th>
 <th style="text-align: center;">Highlights</th>
 </tr>
+
+
+<tr>
+<td style="text-align: left;"><strong><span id="Estuary_5.30_is_released"><span id="Estuary_5.30_is_released"><a href="https://github.com/open-estuary/open-estuary.github.io/blob/master/Release/2019-09-12-Estuary%20v5.30.md">Estuary5.30</a></span></span></strong><strong><span id="Estuary_5.30_is_released">
+</span></strong></td>
+<td style="text-align: center;">June,2019</td>
+<td><a href="https://github.com/open-estuary/open-estuary.github.io/blob/master/Release/2019-09-12-Estuary%20v5.30.md">Update to Kernel 5.2.0</a>.</td>
+</tr>
+<tr>
 <tr>
 <td style="text-align: left;"><strong><span id="Estuary_5.20_is_released"><span id="Estuary_5.20_is_released"><a href="https://github.com/open-estuary/open-estuary.github.io/blob/master/Release/2019-7-Estuary%20v5.20.md">Estuary5.20</a></span></span></strong><strong><span id="Estuary_5.20_is_released">
 </span></strong></td>
@@ -76,6 +85,4 @@ tags:
 <td style="text-align: center;">Aug,2015</td>
 <td><a href="https://github.com/open-estuary/open-estuary.github.io/blob/master/Release/2015-08-Estuary%20v1.2.md">Upgrade kernel to v3.19-rc4, Enable DebianFedoraOpenSuseUbuntu, Improve build scheme</a>.</td>
 </tr>
-</tbody>
-</table>
-&nbsp;
+
